syntax = "proto3";

option csharp_namespace = "ReportServer";

package greet;

service ReportServices {

  rpc PrintReport(PrintRequest) returns (PrintResult);
  rpc GenerateReport(ReportGenerationRequest) returns (ReportResult);
}

enum ReportType {
  PDF = 0;
  XLS = 1;
  HTML = 2;
}

message ReportResult {
  bytes binary_data = 1;
  ReportType report_type = 2;
}

message PrintRequest {
  string printer_name = 1;
  bytes pdf_data = 2;
}

message DataSet {
  string set_name = 1;
  string serialized_data = 2;
}

message ReportGenerationRequest {
  ReportType repot_type = 1;
  bytes report_definition = 2;
  DataSet report_data = 3;
}

message PrintResult {
  string message = 1;
  bool   success = 2;
}


